--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.DS_Store
+.vscode
+README.html
+
 # Logs
 logs
 *.log
@@ -56,4 +60,4 @@ typings/
 
 # dotenv environment variables file
 .env
-
+.envrc
