--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-	"name": "pulse",
-	"private": true,
-	"version": "2.0.0",
-	"description": "A real-time chat app made using websockets",
-	"main": "client/scripts/lib/app.js",
-	"scripts": {
-		"start": "meteor run",
-		"build": "meteor build"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/nirantak/pulse.git"
-	},
-	"author": "Nirantak Raghav",
-	"license": "GPL-3.0",
-	"bugs": {
-		"url": "https://github.com/nirantak/pulse/issues"
-	},
-	"homepage": "https://github.com/nirantak/pulse#readme",
-	"engines": {
-		"node": ">=10.6.0",
-		"npm": "~6.1.0"
-	},
-	"dependencies": {
-		"@babel/runtime": "^7.0.0-beta.36",
-		"angular": "^1.6.9",
-		"angular-animate": "^1.6.9",
-		"angular-ecmascript": "0.0.3",
-		"angular-meteor": "^1.3.12",
-		"angular-meteor-auth": "^1.1.1",
-		"angular-moment": "^1.2.0",
-		"angular-sanitize": "^1.6.9",
-		"angular-ui-router": "^0.3.2",
-		"babel-runtime": "^6.26.0",
-		"ionic-scripts": "^1.3.5",
-		"meteor-node-stubs": "^0.3.2",
-		"moment": "^2.21.0"
-	}
+  "name": "pulse",
+  "private": true,
+  "version": "2.0.1",
+  "description": "A real-time chat app made using websockets",
+  "main": "client/scripts/lib/app.js",
+  "scripts": {
+    "start": "meteor run",
+    "build": "meteor build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nirantak/pulse.git"
+  },
+  "author": "Nirantak Raghav",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/nirantak/pulse/issues"
+  },
+  "homepage": "https://github.com/nirantak/pulse#readme",
+  "engines": {
+    "node": "11.14.0",
+    "npm": "6.9.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.4.3",
+    "angular": "^1.7.8",
+    "angular-animate": "^1.7.8",
+    "angular-ecmascript": "0.0.3",
+    "angular-meteor": "^1.3.12",
+    "angular-meteor-auth": "^1.1.1",
+    "angular-moment": "^1.3.0",
+    "angular-sanitize": "^1.7.8",
+    "angular-ui-router": "^0.3.2",
+    "babel-runtime": "^6.26.0",
+    "ionic-scripts": "^1.3.5",
+    "meteor-node-stubs": "^0.3.2",
+    "moment": "^2.24.0"
+  }
 }
